<resources>
    <string name="app_name">Flex</string>
    <string name="submission_sort_content_description">Submission sort icon</string>
    <string name="upvote_icon_content_description">Upvote icon indicator</string>
    <string name="comment_icon_content_description">Comment Icon</string>
    <string name="clock_icon_content_description">Clock Icon</string>
    <string name="text_tab_posts">Posts</string>
    <string name="text_tab_account">Account</string>
    <string name="text_tab_inbox">Inbox</string>
    <string name="text_tab_settings">Settings</string>
    <string name="author_format">by %1$s</string>
    <string name="sort_top">Top</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_best">Best</string>
    <string name="sort_new">New</string>
    <string name="sort_title">Sort by...</string>
    <string name="smile_icon_content_description">Upvote ratio icon</string>
    <string name="upvote_action_content_description">Upvote action button</string>
    <string name="percentage_format">%1$s%%</string>
    <string name="loading_indicator_content_description">Loading indicator</string>
    <string name="comments_title">Comments (%1$s)</string>
    <string name="auth_error">Login failed!</string>
    <string name="action_error_aunauthenticated">You must login first!</string>
    <string name="share_as_image">Share as image</string>
    <string name="text_tab_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="login_failed">Login failed, please try again!</string>
    <string name="copy">Copy text</string>
    <string name="action_share">Share link</string>
    <string name="action_author_profile">View $1%s</string>
    <string name="reddit_image_url">https://i.redd.it/%1$s.%2$s</string>
    <string name="image_gallery_submission_label">%1$d Images</string>
    <string name="media_gallery_submission_label">%1$d Items</string>
    <string name="first_gallery_image_cd">First gallery image</string>
    <string name="second_gallery_image_cd">Second gallery item</string>
    <string name="third_gallery_image_cd">Third gallery item</string>
    <string name="download_button_cd">Download button</string>
    <string name="share_button_cd">Share button</string>
    <string name="gallery_page_number">%1$d/%2$d</string>
    <string name="successful_download">File downloaded!</string>
    <string name="share_reddit_submission">Share Reddit link</string>
    <string name="action_share_all">Share all media</string>
    <string name="share_image">Share selected media</string>
    <string name="share_title">Share...</string>
    <string name="reddit_permalink_format">https://www.reddit.com%1$s</string>
    <string name="nsfw_title">NSFW</string>
    <string name="blur_nsfw">Blur NSFW media</string>
    <string name="media_title">Media</string>
    <string name="share_dialog_title">Share options</string>
    <string name="copy_dialog_title">Copy options</string>
    <string name="action_copy_submission_link">Copy post URL</string>
    <string name="copy_submission_title">Copy post title</string>
    <string name="post_title_clip_key">post title</string>
    <string name="media_link_clip_key">media link</string>
    <string name="post_link_clip_key">post link</string>
    <string name="copy_media_link">Copy media URL</string>
    <string name="media_metadata_dialog_title">Details</string>
    <string name="media_metadata_source">Source:</string>
    <string name="media_metadata_dimensions">Dimensions:</string>
    <string name="media_metadata_size">Size:</string>
    <string name="default_empty_comments">It\'s quiet here...</string>
    <string name="easter_egg_tommyinnit">It\'s quiet here... Wait, what\'s that I hear!?\n\n🎶 jUmP In tHe cAdIlAc 🎶</string>
    <string name="easter_egg_ksi">Ayo, why is it so quiet?\n\nThis post deserves some juicy PPPPLLLLLLATINUM fam!</string>
    <string name="easter_egg_spacex">It\'s quiet here...\n\nJeff who?</string>
    <string name="back_button_cd">Back button</string>
    <string name="create_post_cd">Create post</string>
    <string name="post_action_text">Post</string>
    <string name="thumbnail_cd">Video thumbnail</string>
    <string name="submit_post">Submit</string>
    <string name="cancel_post">Cancel</string>
    <string name="title_hint">Title</string>
    <string name="no_flair_text">No flair set for post</string>
    <string name="expand_comment_cd">Expand comment icon</string>
    <string name="num_replies">%1$d more replies</string>
    <string name="random_subreddit_text">Random</string>
    <string name="random_nsfw_text">RandNSFW</string>
    <string name="subreddit_subscribers_format">%1$s subscribers</string>
    <string name="subreddit_dialog_title">r/%1$s</string>
    <string name="show_rules">View rules</string>
    <string name="show_sidebar">View sidebar</string>
    <string name="show_moderators">View moderators</string>
    <string name="set_user_flair">Set user flair</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="favourite">Favourite</string>
    <string name="options_sub_title">Options</string>
    <string name="rules_title_format">r/%1$s rules</string>
    <string name="sidebar_title_format">r/%1$s sidebar</string>
    <string name="moderators_title_format">r/%1$s mods</string>
    <string name="flair_title_format">r/%1$s flair</string>
    <string name="moderator_permissions_format">Permissions: %1$s</string>
    <string name="subreddit_subscribe_success">Subscribed to Subreddit!</string>
    <string name="subreddit_unsubscribe_success">Unsubscribed from Subreddit!</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="subreddit_unfavorite_success">Unfavorited Subreddit!</string>
    <string name="subreddit_favorite_success">Favorited Subreddit!</string>
    <string name="text_input_flair">Custom flair</string>
    <string name="text_set_flair_title">Set Flair</string>
    <string name="ok">OK</string>
    <string name="reply_heading">Reply:</string>
    <string name="reply_comment_title">Submit reply</string>
    <string name="pick_image_title">Pick Image</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">Unkown error occured</string>
    <string name="uploading_image">Uploading image...</string>
    <string name="generic_network_error">Network error!</string>
    <string name="upload_image_success">Successfully uploaded image!</string>
    <string name="set_image_name_title">Set image name</string>
    <string name="submit_button_cd">Submit comment button</string>
    <string name="submit_comment_success">Comment posted!</string>
    <string name="submit_comment_error">Failed to post comment!</string>
    <string name="submit_comment_no_content_error">Comment must contain some content.</string>
    <string name="analytics_dialog_title">Data Collection</string>
    <string name="analytics_explanation">Analytics help me to identify and fix bugs, as well as helping to provide a better experience. However, privacy is a human right and all data collection is disabled by default.</string>
    <string name="crashlytics_checkbox">Enable Crashlytics</string>
    <string name="analytics_checkbox">Enable Analytics</string>
    <string name="analytics_settings">These settings can be changed anytime in the apps settings.</string>
    <string name="posts_title">Posts</string>
    <string name="show_preview">Show post previews</string>
    <string name="settings_profiles_title">Settings profiles</string>
    <string name="add_profile">Add Profile</string>
    <string name="profile_name_input_hint">Profile Name</string>
    <string name="profile_geofence_title">Geofence settings profile</string>
    <string name="enable_geofencing">Apply profile when entering a geofence?</string>
    <string name="share_as_image_title">Image preview</string>
    <string name="share_image_hide_username">Hide username</string>
    <string name="share_image_hide_subreddit">Hide subreddit</string>
    <string name="share_as_image_button">Share</string>
    <string name="save_as_image_button">Save</string>
    <string name="youtube_pill_text">YouTube</string>
    <string name="search_hint">Subreddits, users etc.</string>
    <string name="title_add_profile">Add Profile</string>
    <string name="geofence_slider_desc">Geofence Radius Slider</string>
    <string name="image_save_success">Image saved successfully!</string>
    <string name="subreddit_link_prefix">flex://?subreddit=</string>
    <string name="general_title">General</string>
    <string name="settings_section_icon_cd">Settings section icon</string>
    <string name="title_notification_settings">Notifications</string>
    <string name="subreddit_trackers_title">Subreddit Trackers</string>
    <string name="subreddit_trackers_description">Get notified when posts matching your criteria are created</string>
    <string name="add_subreddit_tracker">Add Subreddit Tracker</string>
    <string name="title_subreddit_tracker">Add Tracker</string>
    <string name="personal_notifications_switch">Personal notifications</string>
    <string name="personal_notifications_title">Personal notifications</string>
    <string name="personal_notifications_description">Private messages, comment replies and mentions</string>
    <string name="title_create_subreddit_tracker">Create Tracker</string>
    <string name="reminder_channel_name">Remind me</string>
    <string name="reminder_channel_description">Post/Comment reminder notifications</string>
    <string name="reminder_set_message">Reminder has been set!</string>
    <string name="twitter_verified_badge">Twitter verified badge</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="tweet_image">Tweet image</string>
    <string name="search_title">Search</string>
    <string name="tick">Tick icon</string>
    <string name="upvote_success">Upvoted!</string>
    <string name="remove_vote_success">Removed vote!</string>
    <string name="downvote_success">Downvoted!</string>
    <string name="notification_permission_denied">You need to grant the notification permission!</string>
</resources>