<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/submissionListFragment"
        android:title="@string/text_tab_posts"
        app:showAsAction="always"
        android:icon="@drawable/view_list" />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/text_tab_search"
        app:showAsAction="always"
        android:icon="@drawable/search" />
    <item
        android:id="@+id/accountNavGraph"
        android:title="@string/text_tab_account"
        app:showAsAction="always"
        android:icon="@drawable/account_circle" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/text_tab_settings"
        app:showAsAction="always"
        android:icon="@drawable/settings" />
</menu>