<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_title"
        style="@style/Bold.H2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginStart="@dimen/spacing_l"
        android:text="@string/share_dialog_title" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/action_share_image"
        style="@style/SelectableTextViewItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintEnd_toStartOf="@id/action_share_all"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginStart="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/spacing_s"
        android:text="@string/share_image"
        app:drawableTopCompat="@drawable/ic_baseline_image_24" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/action_share_all"
        style="@style/SelectableTextViewItem"
        app:layout_constraintStart_toEndOf="@id/action_share_image"
        app:layout_constraintTop_toTopOf="@id/action_share_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/action_share_image"
        android:layout_marginStart="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_m"
        android:text="@string/action_share_all"
        app:drawableTopCompat="@drawable/ic_collections"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/action_share_post_link"
        style="@style/SelectableTextViewItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_share_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/action_share_image"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginStart="@dimen/spacing_m"
        android:layout_marginBottom="@dimen/spacing_xl"
        android:text="@string/share_reddit_submission"
        app:drawableTopCompat="@drawable/ic_link" />

</androidx.constraintlayout.widget.ConstraintLayout>