<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:text="@string/analytics_explanation"
        android:textAlignment="center" />

    <View
        android:id="@+id/content_divider"
        android:layout_width="@dimen/spacing_xl"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/explanation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_l"
        android:background="?attr/colorOnSecondaryContainer" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/crashlytics_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crashlytics_checkbox"
        app:layout_constraintTop_toBottomOf="@id/content_divider"
        app:layout_constraintStart_toStartOf="@id/explanation"
        app:layout_constraintEnd_toEndOf="@id/explanation"
        android:layout_marginTop="@dimen/spacing_l" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/analytics_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/analytics_checkbox"
        app:layout_constraintTop_toBottomOf="@id/crashlytics_checkbox"
        app:layout_constraintStart_toStartOf="@id/explanation"
        app:layout_constraintEnd_toEndOf="@id/explanation"
        android:layout_marginTop="@dimen/spacing_m" />

    <View
        android:id="@+id/switch_divider"
        android:layout_width="@dimen/spacing_xl"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/analytics_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_l"
        android:background="?attr/colorOnSecondaryContainer" />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/switch_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:text="@string/analytics_settings"
        android:textAlignment="center" />

</androidx.constraintlayout.widget.ConstraintLayout>