<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/profile_name_input_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/geofence_title"
        style="?attr/textAppearanceBodySmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_layout"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_marginStart="@dimen/spacing_l"
        android:text="@string/profile_geofence_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/geofence_title_divider"
        android:background="@color/accent"
        app:layout_constraintTop_toBottomOf="@id/geofence_title"
        android:layout_marginTop="@dimen/spacing_l"
        android:alpha="0.2" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/geofence_enabled"
        app:layout_constraintTop_toBottomOf="@id/geofence_title_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:text="@string/enable_geofencing"
        android:checked="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:layout_marginBottom="@dimen/spacing_xl"
        style="@style/ThemeOverlay.Material3.Button"
        android:text="@string/add_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>